# LLearn

./: .env.example  .gitignore  .gitmessage.txt  Dockerfile  README.md  alembic.ini  config.py  debug_config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  startup.sh  test_create_user.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue-templates.md
DI/: containers.py
admin/application/: admin_service.py
alembic/: env.py
alembic/versions/: 2025_07_23_1324-a73404c7caa5_create_users_table.py  2025_07_23_1414-3211bbd1f621_create_users_table.py  2025_07_24_0024-715448e08026_add_role_column_to_users.py  2025_07_24_0115-54e95a0912f4_seed_admin_user.py  2025_08_01_0922-529049bbaf14_fix_curriculum_db.py  2025_08_01_2156-c338b5d92931_add_social_table.py  2025_08_01_2239-9e48abd53979_add_comment_tables.py  2025_08_02_0045-fa6efaad942d_add_tag_curriculum.py  2025_08_02_1236-c68040e76137_reset_initial_migration.py  83bd1ae25c66_initial_tables.py
api/v1/: routers.py
app/: main.py
app/api/: deps.py  errors.py  health.py  health_check.py
app/core/: config.py  container.py
app/schemas/: __init__.py  common.py  curriculum.py  feedback.py  health_check.py  summary.py  user.py  week_topic.py
backend/app/: main.py
backend/script/: startup.sh
backend/tests/: conftest.py  multiuser_llm_test_20250817_072129.json  multiuser_llm_test_20250817_084200.json  user_baseline_performance.json
common/: auth.py
curriculum/application/: comment_service.py  curriculum_service.py  exception.py  feedback_service.py  prompt_templates.py  social_service.py  summary_service.py  tag_service.py
curriculum/interface/: exception_handler.py
db/: database.py  database_models.py
docs/: README.md  api.md  architecture.md  operations.md  overview.md  security.md
docs/api/: admin.md  curriculums.md  feed.md  learning.md  social.md  taxonomy.md  user.md
domain/entities/: curriculum.py  feedback.py  summary.py  user.py  week_topic.py
domain/exceptions/: repository_exception.py
domain/repositories/: curriculum_repository.py  feedback_repository.py  summary_repository.py  user_repository.py  week_topic_repository.py
domain/services/: __init__.py  llm_service.py  password_service.py
domain/value_objects/: email.py  password.py
frontend/: package-lock.json  package.json
monitoring/: metrics.py  metrics_collector.py  middleware.py  prometheus.yml  router.py
script/: startup.sh
tests/: conftest.py  session.py
utils/: crypto.py
(+338 files in other folders)
