[project]
name = "llearn"
version = "0.1.0"
description = "LLearn project with f-lab mentor"
authors = [
    {name = "kikiru328",email = "kikiru328@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "cryptography (>=45.0.4,<46.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "openai (>=1.93.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

