[project]
name = "llearn"
version = "0.1.0"
description = ""
authors = [
    {name = "kikiru328",email = "kikiru328@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

